all fixed style

--- a/client/src/app/pages/add-user/add-user.component.html
+++ b/client/src/app/pages/add-user/add-user.component.html
@@ -19,7 +19,7 @@
                     Email:
                 </div>
                 <div class="ui-grid-col-6">
-                    <input pInputText type="text" formControlName="email" class="form-control" name="email">
+                    <input pInputText type="email" formControlName="email" class="form-control" name="email">
                 </div>
                 <div class="ui-grid-col-4">
                     <div [hidden]="addUserForm.controls['email'].valid || !addUserForm.controls['email'].dirty" class="alert alert-danger">
