--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-navbar></app-navbar>
-<router-outlet ></router-outlet>
+<router-outlet ><p-scrollTop  styleClass="custom-scrolltop" [threshold]="100" icon="pi pi-arrow-up"></p-scrollTop></router-outlet>
 <app-footer></app-footer>
