--- a/client/src/app/pages/cars-adds/cars-adds.component.html
+++ b/client/src/app/pages/cars-adds/cars-adds.component.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="center-text">
-                <label    class="sirina"  for="price">Price range: <b> {{rangeValues[0] + ' - ' + rangeValues[1]}}</b></label>
+                <label    class="sirina"  for="price">Price range: <b> {{'$'+rangeValues[0] + ' - ' +'$'+ rangeValues[1]}}</b></label>
                 <p-slider  class="mt-2 sirina" [(ngModel)]="rangeValues"[step]="500" [min]="1000" [max]="100000" inputId="price" [range]="true"></p-slider>
             </div>
 
@@ -43,12 +43,20 @@
                 <ng-template pTemplate="content" class="content">
                     <img alt="{{car.Model}}" class="picture me-5" src="{{car.imageUrl}}">
                     <div class="right-side-content">
-                        <p><b>Make </b>{{car.Make}}</p>
-                        <p><b>Price</b> {{car.Price}}</p>
-                        <p><b>Year </b>{{car.Year}}</p>
-                        <p><b>Jos neki podatak TODO IVAN</b> {{car.Year}}</p>
-                        <p><b>Jos neki podatak TODO IVAN</b> {{car.Year}}</p>
-                        <p><b>Jos neki podatak TODO IVAN</b> {{car.Year}}</p>
+                        <p><b>Make: </b>{{car.Make}} </p>
+                        <hr style="margin: 0; padding: 0;">
+                        <p><b>Model:</b> {{car.Model}}</p>
+                        <hr style="margin: 0; padding: 0;">
+                        <p><b>Year: </b>{{car.Year}}</p>
+                        <hr style="margin: 0; padding: 0;">
+                        <p><b>Price:</b> ${{car.Price}}</p>
+                        <hr style="margin: 0; padding: 0;">
+                        <p><b>State:</b> {{car.State}}</p>
+                        <hr style="margin: 0; padding: 0;">
+                        <p><b>Engine:</b> {{car.Engine}}</p>
+                        <hr style="margin: 0; padding: 0;">
+                        <p><b>FuelType:</b> {{car.FuelType}}</p>
+                        <hr style="margin: 0; padding: 0;">
                     </div>
                 
                 </ng-template>
