--- a/client/src/app/pages/edit-car/edit-car.component.css
+++ b/client/src/app/pages/edit-car/edit-car.component.css
@@ -21,3 +21,11 @@
         transform: rotate(360deg);
     }   
 }
+.editCarForm{
+  margin: auto;
+  width: 500px;
+  margin-top: 40px;
+}
+#buttonLogin{
+  margin-top: 50px;
+}
