--- a/client/src/app/pages/single-car/single-car.component.html
+++ b/client/src/app/pages/single-car/single-car.component.html
@@ -1,10 +1,35 @@
-<div *ngIf="loading">
+<div *ngIf="loading" class="loading-spinner center mt-5">
+    <div class="spinner"></div>
 </div>
 <div *ngIf="!loading">
-    <h1>{{car.Model}}</h1>
-    <p>{{car.SellerName}}</p>
-    <img alt="{{car.Model}}" class="picture" src="{{imageUrl}}">
-    <p-button *ngIf="loggedIn && checkIfVendor()" (click)="buyCar()" label="Buy car" ></p-button>
+    <div class="content">
+        <h1>{{car.Model}}</h1>
+        <p><b>Seller:</b> {{car.SellerName}}</p>
+        <div class="picture-text">
+            <img alt="{{car.Model}}" (click)="openLink()" class="picture" src="{{imageUrl}}">
+            <div class="text">
+                <hr style="margin: 0; padding: 0;">
+                <p><b>Make: </b>{{car.Make}} </p>
+                <hr style="margin: 0; padding: 0;">
+                <p><b>Model:</b> {{car.Model}}</p>
+                <hr style="margin: 0; padding: 0;">
+                <p><b>Year: </b>{{car.Year}}</p>
+                <hr style="margin: 0; padding: 0;">
+                <p><b>Price:</b> ${{car.Price}}</p>
+                <hr style="margin: 0; padding: 0;">
+                <p><b>State:</b> {{car.State}}</p>
+                <hr style="margin: 0; padding: 0;">
+                <p><b>Engine:</b> {{car.Engine}}</p>
+                <hr style="margin: 0; padding: 0;">
+                <p><b>FuelType:</b> {{car.FuelType}}</p>
+                <hr style="margin: 0; padding: 0;">
+            </div>
+        </div>
+        <p-button class="button-buy " styleClass="p-button-secondary" *ngIf="loggedIn && checkIfVendor()" (click)="buyCar()" label="Buy car" ></p-button>
+    </div>
+    <!-- <small><a class="pointer text-end text-nowrap" style="max-width: 320px; text-decoration: none; color: black;"
+        target="_blank" href="https://www.ruby-lang.org/en/documentation/faq/1/">Imate nekih
+pitanja?</a></small> -->
 </div>
 
 
